Use different colors for different curves even if no theme with a color palette is applied.

BUG: 394028
FIXED-IN: 2.5